--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@stdlib/random-base-mt19937": "^0.1.0",
     "bootstrap": "^4.5.2",
     "chai": "^4.2.0",
     "esm": "^3.2.25",
